--- a/BlogEngine/BlogEngine.NET/Web.Config
+++ b/BlogEngine/BlogEngine.NET/Web.Config
@@ -44,15 +44,10 @@
         <authenticationService enabled="true" requireSSL="false" />
       </webServices>
     </scripting>
-  </system.web.extensions>
-  <!--
-    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
+  </system.web.extensions> <system.Web>
         <httpRuntime targetFramework="4.5"/>
       </system.Web>
-  -->
+ 
   <system.web>
     <webServices>
       <protocols>
